Removed gc prefix from brand colors

--- a/tachyons.css
+++ b/tachyons.css
@@ -83,16 +83,16 @@ template { display: none; }
 .aspect-ratio--5x7 { padding-bottom: 140%; }
 .aspect-ratio--1x1 { padding-bottom: 100%; }
 .aspect-ratio--object { position: absolute; top: 0; right: 0; bottom: 0; left: 0; width: 100%; height: 100%; z-index: 100; }
-.bg-gc-blue { background-color: #4b71fc; }
-.bg-gc-blue-80 { background-color: #708fff; }
-.bg-gc-blue-60 { background-color: #91a9ff; }
-.bg-gc-blue-40 { background-color: #bdccff; }
-.bg-gc-blue-20 { background-color: #eaefff; }
-.bg-gc-navy { background-color: #212e5f; }
-.bg-gc-navy-80 { background-color: #7b83a1; }
-.bg-gc-navy-60 { background-color: #9fa6bf; }
-.bg-gc-navy-40 { background-color: #d7dbe7; }
-.bg-gc-navy-20 { background-color: #eff1f9; }
+.bg-blue { background-color: #4b71fc; }
+.bg-blue-80 { background-color: #708fff; }
+.bg-blue-60 { background-color: #91a9ff; }
+.bg-blue-40 { background-color: #bdccff; }
+.bg-blue-20 { background-color: #eaefff; }
+.bg-navy { background-color: #212e5f; }
+.bg-navy-80 { background-color: #7b83a1; }
+.bg-navy-60 { background-color: #9fa6bf; }
+.bg-navy-40 { background-color: #d7dbe7; }
+.bg-navy-20 { background-color: #eff1f9; }
 .bg-black { background-color: #000; }
 .bg-white { background-color: #fff; }
 .bg-green { background-color: #39b54a; }
@@ -125,16 +125,16 @@ template { display: none; }
 .bb { border-bottom-style: solid; border-bottom-width: 1px; }
 .bl { border-left-style: solid; border-left-width: 1px; }
 .bn { border-style: none; border-width: 0; }
-.b--gc-blue { border-color: #4b71fc; }
-.b--gc-blue-80 { border-color: #708fff; }
-.b--gc-blue-60 { border-color: #91a9ff; }
-.b--gc-blue-40 { border-color: #bdccff; }
-.b--gc-blue-20 { border-color: #eaefff; }
-.b--gc-navy { border-color: #212e5f; }
-.b--gc-navy-80 { border-color: #7b83a1; }
-.b--gc-navy-60 { border-color: #9fa6bf; }
-.b--gc-navy-40 { border-color: #d7dbe7; }
-.b--gc-navy-20 { border-color: #eff1f9; }
+.b--blue { border-color: #4b71fc; }
+.b--blue-80 { border-color: #708fff; }
+.b--blue-60 { border-color: #91a9ff; }
+.b--blue-40 { border-color: #bdccff; }
+.b--blue-20 { border-color: #eaefff; }
+.b--navy { border-color: #212e5f; }
+.b--navy-80 { border-color: #7b83a1; }
+.b--navy-60 { border-color: #9fa6bf; }
+.b--navy-40 { border-color: #d7dbe7; }
+.b--navy-20 { border-color: #eff1f9; }
 .b--black { border-color: #000; }
 .b--white { border-color: #fff; }
 .b--green { border-color: #39b54a; }
@@ -237,16 +237,16 @@ dd, blockquote, figcaption, figure, textarea, table, td, th, tr,
 input[type="email"], input[type="number"], input[type="password"],
 input[type="tel"], input[type="text"], input[type="url"], .border-box { box-sizing: border-box; }
 .pre { overflow-x: auto; overflow-y: hidden; overflow: scroll; }
-.gc-blue { color: #4b71fc; }
-.gc-blue-80 { color: #708fff; }
-.gc-blue-60 { color: #91a9ff; }
-.gc-blue-40 { color: #bdccff; }
-.gc-blue-20 { color: #eaefff; }
-.gc-navy { color: #212e5f; }
-.gc-navy-80 { color: #7b83a1; }
-.gc-navy-60 { color: #9fa6bf; }
-.gc-navy-40 { color: #d7dbe7; }
-.gc-navy-20 { color: #eff1f9; }
+.blue { color: #4b71fc; }
+.blue-80 { color: #708fff; }
+.blue-60 { color: #91a9ff; }
+.blue-40 { color: #bdccff; }
+.blue-20 { color: #eaefff; }
+.navy { color: #212e5f; }
+.navy-80 { color: #7b83a1; }
+.navy-60 { color: #9fa6bf; }
+.navy-40 { color: #d7dbe7; }
+.navy-20 { color: #eff1f9; }
 .black { color: #000; }
 .white { color: #fff; }
 .green { color: #39b54a; }
@@ -830,16 +830,16 @@ code, .code { font-family: Consolas, monaco, monospace; }
 .min-vh-100 { min-height: 100vh; }
 .h-auto { height: auto; }
 .h-inherit { height: inherit; }
-.bg-gc-blue { background-color: #4b71fc; }
-.bg-gc-blue-80 { background-color: #708fff; }
-.bg-gc-blue-60 { background-color: #91a9ff; }
-.bg-gc-blue-40 { background-color: #bdccff; }
-.bg-gc-blue-20 { background-color: #eaefff; }
-.bg-gc-navy { background-color: #212e5f; }
-.bg-gc-navy-80 { background-color: #7b83a1; }
-.bg-gc-navy-60 { background-color: #9fa6bf; }
-.bg-gc-navy-40 { background-color: #d7dbe7; }
-.bg-gc-navy-20 { background-color: #eff1f9; }
+.bg-blue { background-color: #4b71fc; }
+.bg-blue-80 { background-color: #708fff; }
+.bg-blue-60 { background-color: #91a9ff; }
+.bg-blue-40 { background-color: #bdccff; }
+.bg-blue-20 { background-color: #eaefff; }
+.bg-navy { background-color: #212e5f; }
+.bg-navy-80 { background-color: #7b83a1; }
+.bg-navy-60 { background-color: #9fa6bf; }
+.bg-navy-40 { background-color: #d7dbe7; }
+.bg-navy-20 { background-color: #eff1f9; }
 .bg-black { background-color: #000; }
 .bg-white { background-color: #fff; }
 .bg-green { background-color: #39b54a; }
@@ -859,16 +859,16 @@ code, .code { font-family: Consolas, monaco, monospace; }
 .bg-white-80 { background-color: rgba( 255, 255, 255, .80 ); }
 .bg-white-90 { background-color: rgba( 255, 255, 255, .90 ); }
 .bg-transparent { background-color: transparent; }
-.gc-blue { color: #4b71fc; }
-.gc-blue-80 { color: #708fff; }
-.gc-blue-60 { color: #91a9ff; }
-.gc-blue-40 { color: #bdccff; }
-.gc-blue-20 { color: #eaefff; }
-.gc-navy { color: #212e5f; }
-.gc-navy-80 { color: #7b83a1; }
-.gc-navy-60 { color: #9fa6bf; }
-.gc-navy-40 { color: #d7dbe7; }
-.gc-navy-20 { color: #eff1f9; }
+.blue { color: #4b71fc; }
+.blue-80 { color: #708fff; }
+.blue-60 { color: #91a9ff; }
+.blue-40 { color: #bdccff; }
+.blue-20 { color: #eaefff; }
+.navy { color: #212e5f; }
+.navy-80 { color: #7b83a1; }
+.navy-60 { color: #9fa6bf; }
+.navy-40 { color: #d7dbe7; }
+.navy-20 { color: #eff1f9; }
 .black { color: #000; }
 .white { color: #fff; }
 .green { color: #39b54a; }
@@ -888,66 +888,66 @@ code, .code { font-family: Consolas, monaco, monospace; }
 .white-80 { color: rgba( 255, 255, 255, .80 ); }
 .white-90 { color: rgba( 255, 255, 255, .90 ); }
 .transparent { color: transparent; }
-.hover-gc-blue:focus { color: #4b71fc; }
-.hover-gc-blue:hover { color: #4b71fc; }
-.hover-bg-gc-blue:focus { background-color: #4b71fc; }
-.hover-bg-gc-blue:hover { background-color: #4b71fc; }
-.hover-b--gc-blue:focus { border-color: #4b71fc; }
-.hover-b--gc-blue:hover { border-color: #4b71fc; }
-.hover-gc-blue-80:focus { color: #708fff; }
-.hover-gc-blue-80:hover { color: #708fff; }
-.hover-bg-gc-blue-80:focus { background-color: #708fff; }
-.hover-bg-gc-blue-80:hover { background-color: #708fff; }
-.hover-b--gc-blue-80:focus { border-color: #708fff; }
-.hover-b--gc-blue-80:hover { border-color: #708fff; }
-.hover-gc-blue-60:focus { color: #91a9ff; }
-.hover-gc-blue-60:hover { color: #91a9ff; }
-.hover-bg-gc-blue-60:focus { background-color: #91a9ff; }
-.hover-bg-gc-blue-60:hover { background-color: #91a9ff; }
-.hover-b--gc-blue-60:focus { border-color: #91a9ff; }
-.hover-b--gc-blue-60:hover { border-color: #91a9ff; }
-.hover-gc-blue-40:focus { color: #bdccff; }
-.hover-gc-blue-40:hover { color: #bdccff; }
-.hover-bg-gc-blue-40:focus { background-color: #bdccff; }
-.hover-bg-gc-blue-40:hover { background-color: #bdccff; }
-.hover-b--gc-blue-40:focus { border-color: #bdccff; }
-.hover-b--gc-blue-40:hover { border-color: #bdccff; }
-.hover-gc-blue-20:focus { color: #eaefff; }
-.hover-gc-blue-20:hover { color: #eaefff; }
-.hover-bg-gc-blue-20:focus { background-color: #eaefff; }
-.hover-bg-gc-blue-20:hover { background-color: #eaefff; }
-.hover-b--gc-blue-20:focus { border-color: #eaefff; }
-.hover-b--gc-blue-20:hover { border-color: #eaefff; }
-.hover-gc-navy:focus { color: #212e5f; }
-.hover-gc-navy:hover { color: #212e5f; }
-.hover-bg-gc-navy:focus { background-color: #212e5f; }
-.hover-bg-gc-navy:hover { background-color: #212e5f; }
-.hover-b--gc-navy:focus { border-color: #212e5f; }
-.hover-b--gc-navy:hover { border-color: #212e5f; }
-.hover-gc-navy-80:focus { color: #7b83a1; }
-.hover-gc-navy-80:hover { color: #7b83a1; }
-.hover-bg-gc-navy-80:focus { background-color: #7b83a1; }
-.hover-bg-gc-navy-80:hover { background-color: #7b83a1; }
-.hover-b--gc-navy-80:focus { border-color: #7b83a1; }
-.hover-b--gc-navy-80:hover { border-color: #7b83a1; }
-.hover-gc-navy-60:focus { color: #9fa6bf; }
-.hover-gc-navy-60:hover { color: #9fa6bf; }
-.hover-bg-gc-navy-60:focus { background-color: #9fa6bf; }
-.hover-bg-gc-navy-60:hover { background-color: #9fa6bf; }
-.hover-b--gc-navy-60:focus { border-color: #9fa6bf; }
-.hover-b--gc-navy-60:hover { border-color: #9fa6bf; }
-.hover-gc-navy-40:focus { color: #d7dbe7; }
-.hover-gc-navy-40:hover { color: #d7dbe7; }
-.hover-bg-gc-navy-40:focus { background-color: #d7dbe7; }
-.hover-bg-gc-navy-40:hover { background-color: #d7dbe7; }
-.hover-b--gc-navy-40:focus { border-color: #d7dbe7; }
-.hover-b--gc-navy-40:hover { border-color: #d7dbe7; }
-.hover-gc-navy-20:focus { color: #eff1f9; }
-.hover-gc-navy-20:hover { color: #eff1f9; }
-.hover-bg-gc-navy-20:focus { background-color: #eff1f9; }
-.hover-bg-gc-navy-20:hover { background-color: #eff1f9; }
-.hover-b--gc-navy-20:focus { border-color: #eff1f9; }
-.hover-b--gc-navy-20:hover { border-color: #eff1f9; }
+.hover-blue:focus { color: #4b71fc; }
+.hover-blue:hover { color: #4b71fc; }
+.hover-bg-blue:focus { background-color: #4b71fc; }
+.hover-bg-blue:hover { background-color: #4b71fc; }
+.hover-b--blue:focus { border-color: #4b71fc; }
+.hover-b--blue:hover { border-color: #4b71fc; }
+.hover-blue-80:focus { color: #708fff; }
+.hover-blue-80:hover { color: #708fff; }
+.hover-bg-blue-80:focus { background-color: #708fff; }
+.hover-bg-blue-80:hover { background-color: #708fff; }
+.hover-b--blue-80:focus { border-color: #708fff; }
+.hover-b--blue-80:hover { border-color: #708fff; }
+.hover-blue-60:focus { color: #91a9ff; }
+.hover-blue-60:hover { color: #91a9ff; }
+.hover-bg-blue-60:focus { background-color: #91a9ff; }
+.hover-bg-blue-60:hover { background-color: #91a9ff; }
+.hover-b--blue-60:focus { border-color: #91a9ff; }
+.hover-b--blue-60:hover { border-color: #91a9ff; }
+.hover-blue-40:focus { color: #bdccff; }
+.hover-blue-40:hover { color: #bdccff; }
+.hover-bg-blue-40:focus { background-color: #bdccff; }
+.hover-bg-blue-40:hover { background-color: #bdccff; }
+.hover-b--blue-40:focus { border-color: #bdccff; }
+.hover-b--blue-40:hover { border-color: #bdccff; }
+.hover-blue-20:focus { color: #eaefff; }
+.hover-blue-20:hover { color: #eaefff; }
+.hover-bg-blue-20:focus { background-color: #eaefff; }
+.hover-bg-blue-20:hover { background-color: #eaefff; }
+.hover-b--blue-20:focus { border-color: #eaefff; }
+.hover-b--blue-20:hover { border-color: #eaefff; }
+.hover-navy:focus { color: #212e5f; }
+.hover-navy:hover { color: #212e5f; }
+.hover-bg-navy:focus { background-color: #212e5f; }
+.hover-bg-navy:hover { background-color: #212e5f; }
+.hover-b--navy:focus { border-color: #212e5f; }
+.hover-b--navy:hover { border-color: #212e5f; }
+.hover-navy-80:focus { color: #7b83a1; }
+.hover-navy-80:hover { color: #7b83a1; }
+.hover-bg-navy-80:focus { background-color: #7b83a1; }
+.hover-bg-navy-80:hover { background-color: #7b83a1; }
+.hover-b--navy-80:focus { border-color: #7b83a1; }
+.hover-b--navy-80:hover { border-color: #7b83a1; }
+.hover-navy-60:focus { color: #9fa6bf; }
+.hover-navy-60:hover { color: #9fa6bf; }
+.hover-bg-navy-60:focus { background-color: #9fa6bf; }
+.hover-bg-navy-60:hover { background-color: #9fa6bf; }
+.hover-b--navy-60:focus { border-color: #9fa6bf; }
+.hover-b--navy-60:hover { border-color: #9fa6bf; }
+.hover-navy-40:focus { color: #d7dbe7; }
+.hover-navy-40:hover { color: #d7dbe7; }
+.hover-bg-navy-40:focus { background-color: #d7dbe7; }
+.hover-bg-navy-40:hover { background-color: #d7dbe7; }
+.hover-b--navy-40:focus { border-color: #d7dbe7; }
+.hover-b--navy-40:hover { border-color: #d7dbe7; }
+.hover-navy-20:focus { color: #eff1f9; }
+.hover-navy-20:hover { color: #eff1f9; }
+.hover-bg-navy-20:focus { background-color: #eff1f9; }
+.hover-bg-navy-20:hover { background-color: #eff1f9; }
+.hover-b--navy-20:focus { border-color: #eff1f9; }
+.hover-b--navy-20:hover { border-color: #eff1f9; }
 .hover-black:focus { color: #000; }
 .hover-black:hover { color: #000; }
 .hover-bg-black:focus { background-color: #000; }
@@ -1118,7 +1118,7 @@ img { max-width: 100%; }
 .nested-copy-indent p+p { text-indent: 1em; margin-top: 0; margin-bottom: 0; }
 .nested-copy-separator p+p { margin-top: 1.5em; }
 .nested-img img { width: 100%; max-width: 100%; display: block; }
-.nested-links a { color: undefined; transition: color .15s ease-in; }
+.nested-links a { color: #4b71fc; transition: color .15s ease-in; }
 .nested-links a:hover { color: undefined; transition: color .15s ease-in; }
 .nested-links a:focus { color: undefined; transition: color .15s ease-in; }
 .dim { opacity: 1; transition: opacity .15s ease-in; }
@@ -1386,16 +1386,16 @@ img { max-width: 100%; }
 .z-inherit { z-index: inherit; }
 .z-initial { z-index: initial; }
 .z-unset { z-index: unset; }
-.gc-blue { color: #4b71fc; }
-.gc-blue-80 { color: #708fff; }
-.gc-blue-60 { color: #91a9ff; }
-.gc-blue-40 { color: #bdccff; }
-.gc-blue-20 { color: #eaefff; }
-.gc-navy { color: #212e5f; }
-.gc-navy-80 { color: #7b83a1; }
-.gc-navy-60 { color: #9fa6bf; }
-.gc-navy-40 { color: #d7dbe7; }
-.gc-navy-20 { color: #eff1f9; }
+.blue { color: #4b71fc; }
+.blue-80 { color: #708fff; }
+.blue-60 { color: #91a9ff; }
+.blue-40 { color: #bdccff; }
+.blue-20 { color: #eaefff; }
+.navy { color: #212e5f; }
+.navy-80 { color: #7b83a1; }
+.navy-60 { color: #9fa6bf; }
+.navy-40 { color: #d7dbe7; }
+.navy-20 { color: #eff1f9; }
 .black { color: #000; }
 .white { color: #fff; }
 .green { color: #39b54a; }
