Updated to new small tachyons that will  break everything.
E V E R Y T H I N G.

--- a/src/_border-widths.css
+++ b/src/_border-widths.css
@@ -1,105 +1,1 @@
-
-/*
-
-  BORDER WIDTHS
-  Docs: http://tachyons.io/docs/themes/borders/
-
-  Base:
-    bw = border-width
-
-  Modifiers:
-    0 = 0 width border
-    1 = 1st step in border-width scale
-    2 = 2nd step in border-width scale
-    3 = 3rd step in border-width scale
-    4 = 4th step in border-width scale
-
- Media Query Extensions:
-    -xs  = 36em
-    -s  = 48em
-    -m  = 62em
-    -l  = 75em
-    -xl  = 100em
-
-*/
-.bw0 { border-width: 0rem; }
-.bw1 { border-width: 0.125rem; }
-.bw2 { border-width: 0.25rem; }
-.bw3 { border-width: 0.5rem; }
-.bw4 { border-width: 1rem; }
-
-    .bt-0 { border-top-width: 0; }
-    .br-0 { border-right-width: 0; }
-    .bb-0 { border-bottom-width: 0; }
-    .bl-0 { border-left-width: 0; }
-  
-
-					@media screen and (min-width: 36em) and (max-width: 48em) {
-						.bw0-xs { border-width: 0rem; }
-.bw1-xs { border-width: 0.125rem; }
-.bw2-xs { border-width: 0.25rem; }
-.bw3-xs { border-width: 0.5rem; }
-.bw4-xs { border-width: 1rem; }
-
-    .bt-0-xs { border-top-width: 0; }
-    .br-0-xs { border-right-width: 0; }
-    .bb-0-xs { border-bottom-width: 0; }
-    .bl-0-xs { border-left-width: 0; }
-					}
-				
-
-					@media screen and (min-width: 48em) and (max-width: 62em) {
-						.bw0-s { border-width: 0rem; }
-.bw1-s { border-width: 0.125rem; }
-.bw2-s { border-width: 0.25rem; }
-.bw3-s { border-width: 0.5rem; }
-.bw4-s { border-width: 1rem; }
-
-    .bt-0-s { border-top-width: 0; }
-    .br-0-s { border-right-width: 0; }
-    .bb-0-s { border-bottom-width: 0; }
-    .bl-0-s { border-left-width: 0; }
-					}
-				
-
-					@media screen and (min-width: 62em) and (max-width: 75em) {
-						.bw0-m { border-width: 0rem; }
-.bw1-m { border-width: 0.125rem; }
-.bw2-m { border-width: 0.25rem; }
-.bw3-m { border-width: 0.5rem; }
-.bw4-m { border-width: 1rem; }
-
-    .bt-0-m { border-top-width: 0; }
-    .br-0-m { border-right-width: 0; }
-    .bb-0-m { border-bottom-width: 0; }
-    .bl-0-m { border-left-width: 0; }
-					}
-				
-
-					@media screen and (min-width: 75em) and (max-width: 100em) {
-						.bw0-l { border-width: 0rem; }
-.bw1-l { border-width: 0.125rem; }
-.bw2-l { border-width: 0.25rem; }
-.bw3-l { border-width: 0.5rem; }
-.bw4-l { border-width: 1rem; }
-
-    .bt-0-l { border-top-width: 0; }
-    .br-0-l { border-right-width: 0; }
-    .bb-0-l { border-bottom-width: 0; }
-    .bl-0-l { border-left-width: 0; }
-					}
-				
-
-					@media screen and (min-width: 100em) {
-						.bw0-xl { border-width: 0rem; }
-.bw1-xl { border-width: 0.125rem; }
-.bw2-xl { border-width: 0.25rem; }
-.bw3-xl { border-width: 0.5rem; }
-.bw4-xl { border-width: 1rem; }
-
-    .bt-0-xl { border-top-width: 0; }
-    .br-0-xl { border-right-width: 0; }
-    .bb-0-xl { border-bottom-width: 0; }
-    .bl-0-xl { border-left-width: 0; }
-					}
-				
+undefined
