--- a/src/_font-weight.css
+++ b/src/_font-weight.css
@@ -1,88 +1,1 @@
-
-.normal { font-weight: normal; }
-.b      { font-weight: bold; }
-.fw1    { font-weight: 100; }
-.fw2    { font-weight: 200; }
-.fw3    { font-weight: 300; }
-.fw4    { font-weight: 400; }
-.fw5    { font-weight: 500; }
-.fw6    { font-weight: 600; }
-.fw7    { font-weight: 700; }
-.fw8    { font-weight: 800; }
-.fw9    { font-weight: 900; }
-
-
-					@media screen and (min-width: 36em) and (max-width: 48em) {
-						.normal-xs { font-weight: normal; }
-.b-xs      { font-weight: bold; }
-.fw1-xs    { font-weight: 100; }
-.fw2-xs    { font-weight: 200; }
-.fw3-xs    { font-weight: 300; }
-.fw4-xs    { font-weight: 400; }
-.fw5-xs    { font-weight: 500; }
-.fw6-xs    { font-weight: 600; }
-.fw7-xs    { font-weight: 700; }
-.fw8-xs    { font-weight: 800; }
-.fw9-xs    { font-weight: 900; }
-					}
-				
-
-					@media screen and (min-width: 48em) and (max-width: 62em) {
-						.normal-s { font-weight: normal; }
-.b-s      { font-weight: bold; }
-.fw1-s    { font-weight: 100; }
-.fw2-s    { font-weight: 200; }
-.fw3-s    { font-weight: 300; }
-.fw4-s    { font-weight: 400; }
-.fw5-s    { font-weight: 500; }
-.fw6-s    { font-weight: 600; }
-.fw7-s    { font-weight: 700; }
-.fw8-s    { font-weight: 800; }
-.fw9-s    { font-weight: 900; }
-					}
-				
-
-					@media screen and (min-width: 62em) and (max-width: 75em) {
-						.normal-m { font-weight: normal; }
-.b-m      { font-weight: bold; }
-.fw1-m    { font-weight: 100; }
-.fw2-m    { font-weight: 200; }
-.fw3-m    { font-weight: 300; }
-.fw4-m    { font-weight: 400; }
-.fw5-m    { font-weight: 500; }
-.fw6-m    { font-weight: 600; }
-.fw7-m    { font-weight: 700; }
-.fw8-m    { font-weight: 800; }
-.fw9-m    { font-weight: 900; }
-					}
-				
-
-					@media screen and (min-width: 75em) and (max-width: 100em) {
-						.normal-l { font-weight: normal; }
-.b-l      { font-weight: bold; }
-.fw1-l    { font-weight: 100; }
-.fw2-l    { font-weight: 200; }
-.fw3-l    { font-weight: 300; }
-.fw4-l    { font-weight: 400; }
-.fw5-l    { font-weight: 500; }
-.fw6-l    { font-weight: 600; }
-.fw7-l    { font-weight: 700; }
-.fw8-l    { font-weight: 800; }
-.fw9-l    { font-weight: 900; }
-					}
-				
-
-					@media screen and (min-width: 100em) {
-						.normal-xl { font-weight: normal; }
-.b-xl      { font-weight: bold; }
-.fw1-xl    { font-weight: 100; }
-.fw2-xl    { font-weight: 200; }
-.fw3-xl    { font-weight: 300; }
-.fw4-xl    { font-weight: 400; }
-.fw5-xl    { font-weight: 500; }
-.fw6-xl    { font-weight: 600; }
-.fw7-xl    { font-weight: 700; }
-.fw8-xl    { font-weight: 800; }
-.fw9-xl    { font-weight: 900; }
-					}
-				
+undefined
