--- a/src/_heights.css
+++ b/src/_heights.css
@@ -43,185 +43,113 @@
     -xl  = 100em
 
 */
-.h1 { height: 0.25rem; }
-.h2 { height: 0.5rem; }
-.h3 { height: 0.75rem; }
-.h4 { height: 1rem; }
-.h5 { height: 1.25rem; }
-.h6 { height: 1.5rem; }
-.h7 { height: 1.75rem; }
-.h8 { height: 2rem; }
-.h9 { height: 2.25rem; }
-.h10 { height: 2.5rem; }
-.h11 { height: 3rem; }
-.h12 { height: 4rem; }
-.h13 { height: 5rem; }
-.h14 { height: 8rem; }
-.h15 { height: 16rem; }
-.h-25 { height: 25%; }
-.h-50 { height: 50%; }
-.h-75 { height: 75%; }
-.h-100 { height: 100%; }
-.min-h-100 { min-height: 100%; }
-.vh-25 { height: 25vh; }
-.vh-50 { height: 50vh; }
-.vh-75 { height: 75vh; }
-.vh-100 { height: 100vh; }
-.min-vh-100 { min-height: 100vh; }
-.h-auto { height: auto; }
-.h-inherit { height: inherit; }
+.g-h1 { height: 0.25rem; }
+.g-h2 { height: 0.5rem; }
+.g-h3 { height: 0.75rem; }
+.g-h4 { height: 1rem; }
+.g-h5 { height: 1.25rem; }
+.g-h6 { height: 1.5rem; }
+.g-h7 { height: 1.75rem; }
+.g-h8 { height: 2rem; }
+.g-h9 { height: 2.25rem; }
+.g-h10 { height: 2.5rem; }
+.g-h11 { height: 3rem; }
+.g-h12 { height: 4rem; }
+.g-h13 { height: 5rem; }
+.g-h14 { height: 8rem; }
+.g-h15 { height: 16rem; }
 
 					@media screen and (min-width: 36em) and (max-width: 48em) {
-						.h1-xs { height: 0.25rem; }
-.h2-xs { height: 0.5rem; }
-.h3-xs { height: 0.75rem; }
-.h4-xs { height: 1rem; }
-.h5-xs { height: 1.25rem; }
-.h6-xs { height: 1.5rem; }
-.h7-xs { height: 1.75rem; }
-.h8-xs { height: 2rem; }
-.h9-xs { height: 2.25rem; }
-.h10-xs { height: 2.5rem; }
-.h11-xs { height: 3rem; }
-.h12-xs { height: 4rem; }
-.h13-xs { height: 5rem; }
-.h14-xs { height: 8rem; }
-.h15-xs { height: 16rem; }
-.h-25-xs { height: 25%; }
-.h-50-xs { height: 50%; }
-.h-75-xs { height: 75%; }
-.h-100-xs { height: 100%; }
-.min-h-100-xs { min-height: 100%; }
-.vh-25-xs { height: 25vh; }
-.vh-50-xs { height: 50vh; }
-.vh-75-xs { height: 75vh; }
-.vh-100-xs { height: 100vh; }
-.min-vh-100-xs { min-height: 100vh; }
-.h-auto-xs { height: auto; }
-.h-inherit-xs { height: inherit; }
+						.g-h1-xs { height: 0.25rem; }
+.g-h2-xs { height: 0.5rem; }
+.g-h3-xs { height: 0.75rem; }
+.g-h4-xs { height: 1rem; }
+.g-h5-xs { height: 1.25rem; }
+.g-h6-xs { height: 1.5rem; }
+.g-h7-xs { height: 1.75rem; }
+.g-h8-xs { height: 2rem; }
+.g-h9-xs { height: 2.25rem; }
+.g-h10-xs { height: 2.5rem; }
+.g-h11-xs { height: 3rem; }
+.g-h12-xs { height: 4rem; }
+.g-h13-xs { height: 5rem; }
+.g-h14-xs { height: 8rem; }
+.g-h15-xs { height: 16rem; }
 					}
 				
 
 					@media screen and (min-width: 48em) and (max-width: 62em) {
-						.h1-s { height: 0.25rem; }
-.h2-s { height: 0.5rem; }
-.h3-s { height: 0.75rem; }
-.h4-s { height: 1rem; }
-.h5-s { height: 1.25rem; }
-.h6-s { height: 1.5rem; }
-.h7-s { height: 1.75rem; }
-.h8-s { height: 2rem; }
-.h9-s { height: 2.25rem; }
-.h10-s { height: 2.5rem; }
-.h11-s { height: 3rem; }
-.h12-s { height: 4rem; }
-.h13-s { height: 5rem; }
-.h14-s { height: 8rem; }
-.h15-s { height: 16rem; }
-.h-25-s { height: 25%; }
-.h-50-s { height: 50%; }
-.h-75-s { height: 75%; }
-.h-100-s { height: 100%; }
-.min-h-100-s { min-height: 100%; }
-.vh-25-s { height: 25vh; }
-.vh-50-s { height: 50vh; }
-.vh-75-s { height: 75vh; }
-.vh-100-s { height: 100vh; }
-.min-vh-100-s { min-height: 100vh; }
-.h-auto-s { height: auto; }
-.h-inherit-s { height: inherit; }
+						.g-h1-s { height: 0.25rem; }
+.g-h2-s { height: 0.5rem; }
+.g-h3-s { height: 0.75rem; }
+.g-h4-s { height: 1rem; }
+.g-h5-s { height: 1.25rem; }
+.g-h6-s { height: 1.5rem; }
+.g-h7-s { height: 1.75rem; }
+.g-h8-s { height: 2rem; }
+.g-h9-s { height: 2.25rem; }
+.g-h10-s { height: 2.5rem; }
+.g-h11-s { height: 3rem; }
+.g-h12-s { height: 4rem; }
+.g-h13-s { height: 5rem; }
+.g-h14-s { height: 8rem; }
+.g-h15-s { height: 16rem; }
 					}
 				
 
 					@media screen and (min-width: 62em) and (max-width: 75em) {
-						.h1-m { height: 0.25rem; }
-.h2-m { height: 0.5rem; }
-.h3-m { height: 0.75rem; }
-.h4-m { height: 1rem; }
-.h5-m { height: 1.25rem; }
-.h6-m { height: 1.5rem; }
-.h7-m { height: 1.75rem; }
-.h8-m { height: 2rem; }
-.h9-m { height: 2.25rem; }
-.h10-m { height: 2.5rem; }
-.h11-m { height: 3rem; }
-.h12-m { height: 4rem; }
-.h13-m { height: 5rem; }
-.h14-m { height: 8rem; }
-.h15-m { height: 16rem; }
-.h-25-m { height: 25%; }
-.h-50-m { height: 50%; }
-.h-75-m { height: 75%; }
-.h-100-m { height: 100%; }
-.min-h-100-m { min-height: 100%; }
-.vh-25-m { height: 25vh; }
-.vh-50-m { height: 50vh; }
-.vh-75-m { height: 75vh; }
-.vh-100-m { height: 100vh; }
-.min-vh-100-m { min-height: 100vh; }
-.h-auto-m { height: auto; }
-.h-inherit-m { height: inherit; }
+						.g-h1-m { height: 0.25rem; }
+.g-h2-m { height: 0.5rem; }
+.g-h3-m { height: 0.75rem; }
+.g-h4-m { height: 1rem; }
+.g-h5-m { height: 1.25rem; }
+.g-h6-m { height: 1.5rem; }
+.g-h7-m { height: 1.75rem; }
+.g-h8-m { height: 2rem; }
+.g-h9-m { height: 2.25rem; }
+.g-h10-m { height: 2.5rem; }
+.g-h11-m { height: 3rem; }
+.g-h12-m { height: 4rem; }
+.g-h13-m { height: 5rem; }
+.g-h14-m { height: 8rem; }
+.g-h15-m { height: 16rem; }
 					}
 				
 
 					@media screen and (min-width: 75em) and (max-width: 100em) {
-						.h1-l { height: 0.25rem; }
-.h2-l { height: 0.5rem; }
-.h3-l { height: 0.75rem; }
-.h4-l { height: 1rem; }
-.h5-l { height: 1.25rem; }
-.h6-l { height: 1.5rem; }
-.h7-l { height: 1.75rem; }
-.h8-l { height: 2rem; }
-.h9-l { height: 2.25rem; }
-.h10-l { height: 2.5rem; }
-.h11-l { height: 3rem; }
-.h12-l { height: 4rem; }
-.h13-l { height: 5rem; }
-.h14-l { height: 8rem; }
-.h15-l { height: 16rem; }
-.h-25-l { height: 25%; }
-.h-50-l { height: 50%; }
-.h-75-l { height: 75%; }
-.h-100-l { height: 100%; }
-.min-h-100-l { min-height: 100%; }
-.vh-25-l { height: 25vh; }
-.vh-50-l { height: 50vh; }
-.vh-75-l { height: 75vh; }
-.vh-100-l { height: 100vh; }
-.min-vh-100-l { min-height: 100vh; }
-.h-auto-l { height: auto; }
-.h-inherit-l { height: inherit; }
+						.g-h1-l { height: 0.25rem; }
+.g-h2-l { height: 0.5rem; }
+.g-h3-l { height: 0.75rem; }
+.g-h4-l { height: 1rem; }
+.g-h5-l { height: 1.25rem; }
+.g-h6-l { height: 1.5rem; }
+.g-h7-l { height: 1.75rem; }
+.g-h8-l { height: 2rem; }
+.g-h9-l { height: 2.25rem; }
+.g-h10-l { height: 2.5rem; }
+.g-h11-l { height: 3rem; }
+.g-h12-l { height: 4rem; }
+.g-h13-l { height: 5rem; }
+.g-h14-l { height: 8rem; }
+.g-h15-l { height: 16rem; }
 					}
 				
 
 					@media screen and (min-width: 100em) {
-						.h1-xl { height: 0.25rem; }
-.h2-xl { height: 0.5rem; }
-.h3-xl { height: 0.75rem; }
-.h4-xl { height: 1rem; }
-.h5-xl { height: 1.25rem; }
-.h6-xl { height: 1.5rem; }
-.h7-xl { height: 1.75rem; }
-.h8-xl { height: 2rem; }
-.h9-xl { height: 2.25rem; }
-.h10-xl { height: 2.5rem; }
-.h11-xl { height: 3rem; }
-.h12-xl { height: 4rem; }
-.h13-xl { height: 5rem; }
-.h14-xl { height: 8rem; }
-.h15-xl { height: 16rem; }
-.h-25-xl { height: 25%; }
-.h-50-xl { height: 50%; }
-.h-75-xl { height: 75%; }
-.h-100-xl { height: 100%; }
-.min-h-100-xl { min-height: 100%; }
-.vh-25-xl { height: 25vh; }
-.vh-50-xl { height: 50vh; }
-.vh-75-xl { height: 75vh; }
-.vh-100-xl { height: 100vh; }
-.min-vh-100-xl { min-height: 100vh; }
-.h-auto-xl { height: auto; }
-.h-inherit-xl { height: inherit; }
+						.g-h1-xl { height: 0.25rem; }
+.g-h2-xl { height: 0.5rem; }
+.g-h3-xl { height: 0.75rem; }
+.g-h4-xl { height: 1rem; }
+.g-h5-xl { height: 1.25rem; }
+.g-h6-xl { height: 1.5rem; }
+.g-h7-xl { height: 1.75rem; }
+.g-h8-xl { height: 2rem; }
+.g-h9-xl { height: 2.25rem; }
+.g-h10-xl { height: 2.5rem; }
+.g-h11-xl { height: 3rem; }
+.g-h12-xl { height: 4rem; }
+.g-h13-xl { height: 5rem; }
+.g-h14-xl { height: 8rem; }
+.g-h15-xl { height: 16rem; }
 					}
 				
