--- a/src/_max-widths.css
+++ b/src/_max-widths.css
@@ -29,89 +29,77 @@
     -xl  = 100em
 */
 
-.mw1 { max-width: 1rem; }
-.mw2 { max-width: 2rem; }
-.mw3 { max-width: 4rem; }
-.mw4 { max-width: 8rem; }
-.mw5 { max-width: 16rem; }
-.mw6 { max-width: 32rem; }
-.mw7 { max-width: 48rem; }
-.mw8 { max-width: 64rem; }
-.mw9 { max-width: 96rem; }
-.mw-none { max-width: none; }
-.mw-100 { max-width: 100%; }
+.g-mw1 { max-width: 1rem; }
+.g-mw2 { max-width: 2rem; }
+.g-mw3 { max-width: 4rem; }
+.g-mw4 { max-width: 8rem; }
+.g-mw5 { max-width: 16rem; }
+.g-mw6 { max-width: 32rem; }
+.g-mw7 { max-width: 48rem; }
+.g-mw8 { max-width: 64rem; }
+.g-mw9 { max-width: 96rem; }
 
 					@media screen and (min-width: 36em) and (max-width: 48em) {
-						.mw1-xs { max-width: 1rem; }
-.mw2-xs { max-width: 2rem; }
-.mw3-xs { max-width: 4rem; }
-.mw4-xs { max-width: 8rem; }
-.mw5-xs { max-width: 16rem; }
-.mw6-xs { max-width: 32rem; }
-.mw7-xs { max-width: 48rem; }
-.mw8-xs { max-width: 64rem; }
-.mw9-xs { max-width: 96rem; }
-.mw-none-xs { max-width: none; }
-.mw-100-xs { max-width: 100%; }
+						.g-mw1-xs { max-width: 1rem; }
+.g-mw2-xs { max-width: 2rem; }
+.g-mw3-xs { max-width: 4rem; }
+.g-mw4-xs { max-width: 8rem; }
+.g-mw5-xs { max-width: 16rem; }
+.g-mw6-xs { max-width: 32rem; }
+.g-mw7-xs { max-width: 48rem; }
+.g-mw8-xs { max-width: 64rem; }
+.g-mw9-xs { max-width: 96rem; }
 					}
 				
 
 					@media screen and (min-width: 48em) and (max-width: 62em) {
-						.mw1-s { max-width: 1rem; }
-.mw2-s { max-width: 2rem; }
-.mw3-s { max-width: 4rem; }
-.mw4-s { max-width: 8rem; }
-.mw5-s { max-width: 16rem; }
-.mw6-s { max-width: 32rem; }
-.mw7-s { max-width: 48rem; }
-.mw8-s { max-width: 64rem; }
-.mw9-s { max-width: 96rem; }
-.mw-none-s { max-width: none; }
-.mw-100-s { max-width: 100%; }
+						.g-mw1-s { max-width: 1rem; }
+.g-mw2-s { max-width: 2rem; }
+.g-mw3-s { max-width: 4rem; }
+.g-mw4-s { max-width: 8rem; }
+.g-mw5-s { max-width: 16rem; }
+.g-mw6-s { max-width: 32rem; }
+.g-mw7-s { max-width: 48rem; }
+.g-mw8-s { max-width: 64rem; }
+.g-mw9-s { max-width: 96rem; }
 					}
 				
 
 					@media screen and (min-width: 62em) and (max-width: 75em) {
-						.mw1-m { max-width: 1rem; }
-.mw2-m { max-width: 2rem; }
-.mw3-m { max-width: 4rem; }
-.mw4-m { max-width: 8rem; }
-.mw5-m { max-width: 16rem; }
-.mw6-m { max-width: 32rem; }
-.mw7-m { max-width: 48rem; }
-.mw8-m { max-width: 64rem; }
-.mw9-m { max-width: 96rem; }
-.mw-none-m { max-width: none; }
-.mw-100-m { max-width: 100%; }
+						.g-mw1-m { max-width: 1rem; }
+.g-mw2-m { max-width: 2rem; }
+.g-mw3-m { max-width: 4rem; }
+.g-mw4-m { max-width: 8rem; }
+.g-mw5-m { max-width: 16rem; }
+.g-mw6-m { max-width: 32rem; }
+.g-mw7-m { max-width: 48rem; }
+.g-mw8-m { max-width: 64rem; }
+.g-mw9-m { max-width: 96rem; }
 					}
 				
 
 					@media screen and (min-width: 75em) and (max-width: 100em) {
-						.mw1-l { max-width: 1rem; }
-.mw2-l { max-width: 2rem; }
-.mw3-l { max-width: 4rem; }
-.mw4-l { max-width: 8rem; }
-.mw5-l { max-width: 16rem; }
-.mw6-l { max-width: 32rem; }
-.mw7-l { max-width: 48rem; }
-.mw8-l { max-width: 64rem; }
-.mw9-l { max-width: 96rem; }
-.mw-none-l { max-width: none; }
-.mw-100-l { max-width: 100%; }
+						.g-mw1-l { max-width: 1rem; }
+.g-mw2-l { max-width: 2rem; }
+.g-mw3-l { max-width: 4rem; }
+.g-mw4-l { max-width: 8rem; }
+.g-mw5-l { max-width: 16rem; }
+.g-mw6-l { max-width: 32rem; }
+.g-mw7-l { max-width: 48rem; }
+.g-mw8-l { max-width: 64rem; }
+.g-mw9-l { max-width: 96rem; }
 					}
 				
 
 					@media screen and (min-width: 100em) {
-						.mw1-xl { max-width: 1rem; }
-.mw2-xl { max-width: 2rem; }
-.mw3-xl { max-width: 4rem; }
-.mw4-xl { max-width: 8rem; }
-.mw5-xl { max-width: 16rem; }
-.mw6-xl { max-width: 32rem; }
-.mw7-xl { max-width: 48rem; }
-.mw8-xl { max-width: 64rem; }
-.mw9-xl { max-width: 96rem; }
-.mw-none-xl { max-width: none; }
-.mw-100-xl { max-width: 100%; }
+						.g-mw1-xl { max-width: 1rem; }
+.g-mw2-xl { max-width: 2rem; }
+.g-mw3-xl { max-width: 4rem; }
+.g-mw4-xl { max-width: 8rem; }
+.g-mw5-xl { max-width: 16rem; }
+.g-mw6-xl { max-width: 32rem; }
+.g-mw7-xl { max-width: 48rem; }
+.g-mw8-xl { max-width: 64rem; }
+.g-mw9-xl { max-width: 96rem; }
 					}
 				
