--- a/src/_widths.css
+++ b/src/_widths.css
@@ -52,215 +52,113 @@
     -xl  = 100em
 
 */
-.w1 { width: 0.25rem; }
-.w2 { width: 0.5rem; }
-.w3 { width: 0.75rem; }
-.w4 { width: 1rem; }
-.w5 { width: 1.25rem; }
-.w6 { width: 1.5rem; }
-.w7 { width: 1.75rem; }
-.w8 { width: 2rem; }
-.w9 { width: 2.25rem; }
-.w10 { width: 2.5rem; }
-.w11 { width: 3rem; }
-.w12 { width: 4rem; }
-.w13 { width: 5rem; }
-.w14 { width: 8rem; }
-.w15 { width: 16rem; }
-.w-10 {  width:  10%; }
-.w-20 {  width:  20%; }
-.w-25 {  width:  25%; }
-.w-30 {  width:  30%; }
-.w-33 {  width:  33%; }
-.w-34 {  width:  34%; }
-.w-40 {  width:  40%; }
-.w-50 {  width:  50%; }
-.w-60 {  width:  60%; }
-.w-70 {  width:  70%; }
-.w-75 {  width:  75%; }
-.w-80 {  width:  80%; }
-.w-90 {  width:  90%; }
-.w-100 { width: 100%; }
-.w-third { width: calc(100% / 3); }
-.w-two-thirds { width: calc(100% / 1.5); }
-.w-auto { width: auto; }
+.g-w1 { width: 0.25rem; }
+.g-w2 { width: 0.5rem; }
+.g-w3 { width: 0.75rem; }
+.g-w4 { width: 1rem; }
+.g-w5 { width: 1.25rem; }
+.g-w6 { width: 1.5rem; }
+.g-w7 { width: 1.75rem; }
+.g-w8 { width: 2rem; }
+.g-w9 { width: 2.25rem; }
+.g-w10 { width: 2.5rem; }
+.g-w11 { width: 3rem; }
+.g-w12 { width: 4rem; }
+.g-w13 { width: 5rem; }
+.g-w14 { width: 8rem; }
+.g-w15 { width: 16rem; }
 
 					@media screen and (min-width: 36em) and (max-width: 48em) {
-						.w1-xs { width: 0.25rem; }
-.w2-xs { width: 0.5rem; }
-.w3-xs { width: 0.75rem; }
-.w4-xs { width: 1rem; }
-.w5-xs { width: 1.25rem; }
-.w6-xs { width: 1.5rem; }
-.w7-xs { width: 1.75rem; }
-.w8-xs { width: 2rem; }
-.w9-xs { width: 2.25rem; }
-.w10-xs { width: 2.5rem; }
-.w11-xs { width: 3rem; }
-.w12-xs { width: 4rem; }
-.w13-xs { width: 5rem; }
-.w14-xs { width: 8rem; }
-.w15-xs { width: 16rem; }
-.w-10-xs {  width:  10%; }
-.w-20-xs {  width:  20%; }
-.w-25-xs {  width:  25%; }
-.w-30-xs {  width:  30%; }
-.w-33-xs {  width:  33%; }
-.w-34-xs {  width:  34%; }
-.w-40-xs {  width:  40%; }
-.w-50-xs {  width:  50%; }
-.w-60-xs {  width:  60%; }
-.w-70-xs {  width:  70%; }
-.w-75-xs {  width:  75%; }
-.w-80-xs {  width:  80%; }
-.w-90-xs {  width:  90%; }
-.w-100-xs { width: 100%; }
-.w-third-xs { width: calc(100% / 3); }
-.w-two-thirds-xs { width: calc(100% / 1.5); }
-.w-auto-xs { width: auto; }
+						.g-w1-xs { width: 0.25rem; }
+.g-w2-xs { width: 0.5rem; }
+.g-w3-xs { width: 0.75rem; }
+.g-w4-xs { width: 1rem; }
+.g-w5-xs { width: 1.25rem; }
+.g-w6-xs { width: 1.5rem; }
+.g-w7-xs { width: 1.75rem; }
+.g-w8-xs { width: 2rem; }
+.g-w9-xs { width: 2.25rem; }
+.g-w10-xs { width: 2.5rem; }
+.g-w11-xs { width: 3rem; }
+.g-w12-xs { width: 4rem; }
+.g-w13-xs { width: 5rem; }
+.g-w14-xs { width: 8rem; }
+.g-w15-xs { width: 16rem; }
 					}
 				
 
 					@media screen and (min-width: 48em) and (max-width: 62em) {
-						.w1-s { width: 0.25rem; }
-.w2-s { width: 0.5rem; }
-.w3-s { width: 0.75rem; }
-.w4-s { width: 1rem; }
-.w5-s { width: 1.25rem; }
-.w6-s { width: 1.5rem; }
-.w7-s { width: 1.75rem; }
-.w8-s { width: 2rem; }
-.w9-s { width: 2.25rem; }
-.w10-s { width: 2.5rem; }
-.w11-s { width: 3rem; }
-.w12-s { width: 4rem; }
-.w13-s { width: 5rem; }
-.w14-s { width: 8rem; }
-.w15-s { width: 16rem; }
-.w-10-s {  width:  10%; }
-.w-20-s {  width:  20%; }
-.w-25-s {  width:  25%; }
-.w-30-s {  width:  30%; }
-.w-33-s {  width:  33%; }
-.w-34-s {  width:  34%; }
-.w-40-s {  width:  40%; }
-.w-50-s {  width:  50%; }
-.w-60-s {  width:  60%; }
-.w-70-s {  width:  70%; }
-.w-75-s {  width:  75%; }
-.w-80-s {  width:  80%; }
-.w-90-s {  width:  90%; }
-.w-100-s { width: 100%; }
-.w-third-s { width: calc(100% / 3); }
-.w-two-thirds-s { width: calc(100% / 1.5); }
-.w-auto-s { width: auto; }
+						.g-w1-s { width: 0.25rem; }
+.g-w2-s { width: 0.5rem; }
+.g-w3-s { width: 0.75rem; }
+.g-w4-s { width: 1rem; }
+.g-w5-s { width: 1.25rem; }
+.g-w6-s { width: 1.5rem; }
+.g-w7-s { width: 1.75rem; }
+.g-w8-s { width: 2rem; }
+.g-w9-s { width: 2.25rem; }
+.g-w10-s { width: 2.5rem; }
+.g-w11-s { width: 3rem; }
+.g-w12-s { width: 4rem; }
+.g-w13-s { width: 5rem; }
+.g-w14-s { width: 8rem; }
+.g-w15-s { width: 16rem; }
 					}
 				
 
 					@media screen and (min-width: 62em) and (max-width: 75em) {
-						.w1-m { width: 0.25rem; }
-.w2-m { width: 0.5rem; }
-.w3-m { width: 0.75rem; }
-.w4-m { width: 1rem; }
-.w5-m { width: 1.25rem; }
-.w6-m { width: 1.5rem; }
-.w7-m { width: 1.75rem; }
-.w8-m { width: 2rem; }
-.w9-m { width: 2.25rem; }
-.w10-m { width: 2.5rem; }
-.w11-m { width: 3rem; }
-.w12-m { width: 4rem; }
-.w13-m { width: 5rem; }
-.w14-m { width: 8rem; }
-.w15-m { width: 16rem; }
-.w-10-m {  width:  10%; }
-.w-20-m {  width:  20%; }
-.w-25-m {  width:  25%; }
-.w-30-m {  width:  30%; }
-.w-33-m {  width:  33%; }
-.w-34-m {  width:  34%; }
-.w-40-m {  width:  40%; }
-.w-50-m {  width:  50%; }
-.w-60-m {  width:  60%; }
-.w-70-m {  width:  70%; }
-.w-75-m {  width:  75%; }
-.w-80-m {  width:  80%; }
-.w-90-m {  width:  90%; }
-.w-100-m { width: 100%; }
-.w-third-m { width: calc(100% / 3); }
-.w-two-thirds-m { width: calc(100% / 1.5); }
-.w-auto-m { width: auto; }
+						.g-w1-m { width: 0.25rem; }
+.g-w2-m { width: 0.5rem; }
+.g-w3-m { width: 0.75rem; }
+.g-w4-m { width: 1rem; }
+.g-w5-m { width: 1.25rem; }
+.g-w6-m { width: 1.5rem; }
+.g-w7-m { width: 1.75rem; }
+.g-w8-m { width: 2rem; }
+.g-w9-m { width: 2.25rem; }
+.g-w10-m { width: 2.5rem; }
+.g-w11-m { width: 3rem; }
+.g-w12-m { width: 4rem; }
+.g-w13-m { width: 5rem; }
+.g-w14-m { width: 8rem; }
+.g-w15-m { width: 16rem; }
 					}
 				
 
 					@media screen and (min-width: 75em) and (max-width: 100em) {
-						.w1-l { width: 0.25rem; }
-.w2-l { width: 0.5rem; }
-.w3-l { width: 0.75rem; }
-.w4-l { width: 1rem; }
-.w5-l { width: 1.25rem; }
-.w6-l { width: 1.5rem; }
-.w7-l { width: 1.75rem; }
-.w8-l { width: 2rem; }
-.w9-l { width: 2.25rem; }
-.w10-l { width: 2.5rem; }
-.w11-l { width: 3rem; }
-.w12-l { width: 4rem; }
-.w13-l { width: 5rem; }
-.w14-l { width: 8rem; }
-.w15-l { width: 16rem; }
-.w-10-l {  width:  10%; }
-.w-20-l {  width:  20%; }
-.w-25-l {  width:  25%; }
-.w-30-l {  width:  30%; }
-.w-33-l {  width:  33%; }
-.w-34-l {  width:  34%; }
-.w-40-l {  width:  40%; }
-.w-50-l {  width:  50%; }
-.w-60-l {  width:  60%; }
-.w-70-l {  width:  70%; }
-.w-75-l {  width:  75%; }
-.w-80-l {  width:  80%; }
-.w-90-l {  width:  90%; }
-.w-100-l { width: 100%; }
-.w-third-l { width: calc(100% / 3); }
-.w-two-thirds-l { width: calc(100% / 1.5); }
-.w-auto-l { width: auto; }
+						.g-w1-l { width: 0.25rem; }
+.g-w2-l { width: 0.5rem; }
+.g-w3-l { width: 0.75rem; }
+.g-w4-l { width: 1rem; }
+.g-w5-l { width: 1.25rem; }
+.g-w6-l { width: 1.5rem; }
+.g-w7-l { width: 1.75rem; }
+.g-w8-l { width: 2rem; }
+.g-w9-l { width: 2.25rem; }
+.g-w10-l { width: 2.5rem; }
+.g-w11-l { width: 3rem; }
+.g-w12-l { width: 4rem; }
+.g-w13-l { width: 5rem; }
+.g-w14-l { width: 8rem; }
+.g-w15-l { width: 16rem; }
 					}
 				
 
 					@media screen and (min-width: 100em) {
-						.w1-xl { width: 0.25rem; }
-.w2-xl { width: 0.5rem; }
-.w3-xl { width: 0.75rem; }
-.w4-xl { width: 1rem; }
-.w5-xl { width: 1.25rem; }
-.w6-xl { width: 1.5rem; }
-.w7-xl { width: 1.75rem; }
-.w8-xl { width: 2rem; }
-.w9-xl { width: 2.25rem; }
-.w10-xl { width: 2.5rem; }
-.w11-xl { width: 3rem; }
-.w12-xl { width: 4rem; }
-.w13-xl { width: 5rem; }
-.w14-xl { width: 8rem; }
-.w15-xl { width: 16rem; }
-.w-10-xl {  width:  10%; }
-.w-20-xl {  width:  20%; }
-.w-25-xl {  width:  25%; }
-.w-30-xl {  width:  30%; }
-.w-33-xl {  width:  33%; }
-.w-34-xl {  width:  34%; }
-.w-40-xl {  width:  40%; }
-.w-50-xl {  width:  50%; }
-.w-60-xl {  width:  60%; }
-.w-70-xl {  width:  70%; }
-.w-75-xl {  width:  75%; }
-.w-80-xl {  width:  80%; }
-.w-90-xl {  width:  90%; }
-.w-100-xl { width: 100%; }
-.w-third-xl { width: calc(100% / 3); }
-.w-two-thirds-xl { width: calc(100% / 1.5); }
-.w-auto-xl { width: auto; }
+						.g-w1-xl { width: 0.25rem; }
+.g-w2-xl { width: 0.5rem; }
+.g-w3-xl { width: 0.75rem; }
+.g-w4-xl { width: 1rem; }
+.g-w5-xl { width: 1.25rem; }
+.g-w6-xl { width: 1.5rem; }
+.g-w7-xl { width: 1.75rem; }
+.g-w8-xl { width: 2rem; }
+.g-w9-xl { width: 2.25rem; }
+.g-w10-xl { width: 2.5rem; }
+.g-w11-xl { width: 3rem; }
+.g-w12-xl { width: 4rem; }
+.g-w13-xl { width: 5rem; }
+.g-w14-xl { width: 8rem; }
+.g-w15-xl { width: 16rem; }
 					}
 				
