--- a/tachyons.css
+++ b/tachyons.css
@@ -22,38 +22,96 @@
  *
  */
 /* External Library Includes */
+.bg-blue { background-color: #4b71fc; }
+.bg-blue-80 { background-color: #708fff; }
+.bg-blue-60 { background-color: #91a9ff; }
+.bg-blue-40 { background-color: #bdccff; }
+.bg-blue-20 { background-color: #eaefff; }
+.bg-navy { background-color: #212e5f; }
+.bg-navy-80 { background-color: #7b83a1; }
+.bg-navy-60 { background-color: #9fa6bf; }
+.bg-navy-40 { background-color: #d7dbe7; }
+.bg-navy-20 { background-color: #eff1f9; }
+.bg-green { background-color: #39b54a; }
+.bg-green-light { background-color: #e6ffea; }
+.bg-yellow { background-color: #ffa721; }
+.bg-yellow-light { background-color: #fff7e4; }
+.bg-red { background-color: #ff3d44; }
+.bg-red-light { background-color: #ffe8e8; }
+.bg-black { background-color: #000; }
+.bg-white { background-color: #fff; }
+.bg-black-20 { background-color: rgba( 0, 0, 0, .20 ); }
+.bg-black-40 { background-color: rgba( 0, 0, 0, .40 ); }
+.bg-black-60 { background-color: rgba( 0, 0, 0, .60 ); }
+.bg-black-80 { background-color: rgba( 0, 0, 0, .80 ); }
+.bg-black-90 { background-color: rgba( 0, 0, 0, .90 ); }
+.bg-white-20 { background-color: rgba( 255, 255, 255, .20 ); }
+.bg-white-40 { background-color: rgba( 255, 255, 255, .40 ); }
+.bg-white-60 { background-color: rgba( 255, 255, 255, .60 ); }
+.bg-white-80 { background-color: rgba( 255, 255, 255, .80 ); }
+.bg-white-90 { background-color: rgba( 255, 255, 255, .90 ); }
+.bg-transparent { background-color: transparent; }
+.b--blue { border-color: #4b71fc; }
+.b--blue-80 { border-color: #708fff; }
+.b--blue-60 { border-color: #91a9ff; }
+.b--blue-40 { border-color: #bdccff; }
+.b--blue-20 { border-color: #eaefff; }
+.b--navy { border-color: #212e5f; }
+.b--navy-80 { border-color: #7b83a1; }
+.b--navy-60 { border-color: #9fa6bf; }
+.b--navy-40 { border-color: #d7dbe7; }
+.b--navy-20 { border-color: #eff1f9; }
+.b--green { border-color: #39b54a; }
+.b--green-light { border-color: #e6ffea; }
+.b--yellow { border-color: #ffa721; }
+.b--yellow-light { border-color: #fff7e4; }
+.b--red { border-color: #ff3d44; }
+.b--red-light { border-color: #ffe8e8; }
+.b--black { border-color: #000; }
+.b--white { border-color: #fff; }
+.b--black-20 { border-color: rgba( 0, 0, 0, .20 ); }
+.b--black-40 { border-color: rgba( 0, 0, 0, .40 ); }
+.b--black-60 { border-color: rgba( 0, 0, 0, .60 ); }
+.b--black-80 { border-color: rgba( 0, 0, 0, .80 ); }
+.b--black-90 { border-color: rgba( 0, 0, 0, .90 ); }
+.b--white-20 { border-color: rgba( 255, 255, 255, .20 ); }
+.b--white-40 { border-color: rgba( 255, 255, 255, .40 ); }
+.b--white-60 { border-color: rgba( 255, 255, 255, .60 ); }
+.b--white-80 { border-color: rgba( 255, 255, 255, .80 ); }
+.b--white-90 { border-color: rgba( 255, 255, 255, .90 ); }
+.b--transparent { border-color: transparent; }
 .shadow-1 { box-shadow: 0 0 5px 0 rgba( 31, 46, 95, .08 ); }
 .shadow-2 { box-shadow: 0 0 10px 2px rgba( 31, 46, 95, .08 ); }
 .shadow-3 { box-shadow: -5px 0 30px 0 rgba( 31, 46, 95, .08 ); }
-.blue { color: undefined; }
-.blue-80 { color: undefined; }
-.blue-60 { color: undefined; }
-.blue-40 { color: undefined; }
-.blue-20 { color: undefined; }
-.navy { color: undefined; }
-.navy-80 { color: undefined; }
-.navy-60 { color: undefined; }
-.navy-40 { color: undefined; }
-.navy-20 { color: undefined; }
-.green { color: undefined; }
-.green-light { color: undefined; }
-.yellow { color: undefined; }
-.yellow-light { color: undefined; }
-.red { color: undefined; }
-.red-light { color: undefined; }
-.black { color: undefined; }
-.white { color: undefined; }
-.black-20 { color: undefined; }
-.black-40 { color: undefined; }
-.black-60 { color: undefined; }
-.black-80 { color: undefined; }
-.black-90 { color: undefined; }
-.white-20 { color: undefined; }
-.white-40 { color: undefined; }
-.white-60 { color: undefined; }
-.white-80 { color: undefined; }
-.white-90 { color: undefined; }
-.transparent { color: undefined; }
+.blue { color: #4b71fc; }
+.blue-80 { color: #708fff; }
+.blue-60 { color: #91a9ff; }
+.blue-40 { color: #bdccff; }
+.blue-20 { color: #eaefff; }
+.navy { color: #212e5f; }
+.navy-80 { color: #7b83a1; }
+.navy-60 { color: #9fa6bf; }
+.navy-40 { color: #d7dbe7; }
+.navy-20 { color: #eff1f9; }
+.green { color: #39b54a; }
+.green-light { color: #e6ffea; }
+.yellow { color: #ffa721; }
+.yellow-light { color: #fff7e4; }
+.red { color: #ff3d44; }
+.red-light { color: #ffe8e8; }
+.black { color: #000; }
+.white { color: #fff; }
+.black-20 { color: rgba( 0, 0, 0, .20 ); }
+.black-40 { color: rgba( 0, 0, 0, .40 ); }
+.black-60 { color: rgba( 0, 0, 0, .60 ); }
+.black-80 { color: rgba( 0, 0, 0, .80 ); }
+.black-90 { color: rgba( 0, 0, 0, .90 ); }
+.white-20 { color: rgba( 255, 255, 255, .20 ); }
+.white-40 { color: rgba( 255, 255, 255, .40 ); }
+.white-60 { color: rgba( 255, 255, 255, .60 ); }
+.white-80 { color: rgba( 255, 255, 255, .80 ); }
+.white-90 { color: rgba( 255, 255, 255, .90 ); }
+.transparent { color: transparent; }
 /*
 
   SPACING
@@ -494,6 +552,238 @@
 .g-h13 { height: 5rem; }
 .g-h14 { height: 8rem; }
 .g-h15 { height: 16rem; }
+.bg-blue { background-color: #4b71fc; }
+.bg-blue-80 { background-color: #708fff; }
+.bg-blue-60 { background-color: #91a9ff; }
+.bg-blue-40 { background-color: #bdccff; }
+.bg-blue-20 { background-color: #eaefff; }
+.bg-navy { background-color: #212e5f; }
+.bg-navy-80 { background-color: #7b83a1; }
+.bg-navy-60 { background-color: #9fa6bf; }
+.bg-navy-40 { background-color: #d7dbe7; }
+.bg-navy-20 { background-color: #eff1f9; }
+.bg-green { background-color: #39b54a; }
+.bg-green-light { background-color: #e6ffea; }
+.bg-yellow { background-color: #ffa721; }
+.bg-yellow-light { background-color: #fff7e4; }
+.bg-red { background-color: #ff3d44; }
+.bg-red-light { background-color: #ffe8e8; }
+.bg-black { background-color: #000; }
+.bg-white { background-color: #fff; }
+.bg-black-20 { background-color: rgba( 0, 0, 0, .20 ); }
+.bg-black-40 { background-color: rgba( 0, 0, 0, .40 ); }
+.bg-black-60 { background-color: rgba( 0, 0, 0, .60 ); }
+.bg-black-80 { background-color: rgba( 0, 0, 0, .80 ); }
+.bg-black-90 { background-color: rgba( 0, 0, 0, .90 ); }
+.bg-white-20 { background-color: rgba( 255, 255, 255, .20 ); }
+.bg-white-40 { background-color: rgba( 255, 255, 255, .40 ); }
+.bg-white-60 { background-color: rgba( 255, 255, 255, .60 ); }
+.bg-white-80 { background-color: rgba( 255, 255, 255, .80 ); }
+.bg-white-90 { background-color: rgba( 255, 255, 255, .90 ); }
+.bg-transparent { background-color: transparent; }
+.blue { color: #4b71fc; }
+.blue-80 { color: #708fff; }
+.blue-60 { color: #91a9ff; }
+.blue-40 { color: #bdccff; }
+.blue-20 { color: #eaefff; }
+.navy { color: #212e5f; }
+.navy-80 { color: #7b83a1; }
+.navy-60 { color: #9fa6bf; }
+.navy-40 { color: #d7dbe7; }
+.navy-20 { color: #eff1f9; }
+.green { color: #39b54a; }
+.green-light { color: #e6ffea; }
+.yellow { color: #ffa721; }
+.yellow-light { color: #fff7e4; }
+.red { color: #ff3d44; }
+.red-light { color: #ffe8e8; }
+.black { color: #000; }
+.white { color: #fff; }
+.black-20 { color: rgba( 0, 0, 0, .20 ); }
+.black-40 { color: rgba( 0, 0, 0, .40 ); }
+.black-60 { color: rgba( 0, 0, 0, .60 ); }
+.black-80 { color: rgba( 0, 0, 0, .80 ); }
+.black-90 { color: rgba( 0, 0, 0, .90 ); }
+.white-20 { color: rgba( 255, 255, 255, .20 ); }
+.white-40 { color: rgba( 255, 255, 255, .40 ); }
+.white-60 { color: rgba( 255, 255, 255, .60 ); }
+.white-80 { color: rgba( 255, 255, 255, .80 ); }
+.white-90 { color: rgba( 255, 255, 255, .90 ); }
+.transparent { color: transparent; }
+.hover-blue:focus { color: #4b71fc; }
+.hover-blue:hover { color: #4b71fc; }
+.hover-bg-blue:focus { background-color: #4b71fc; }
+.hover-bg-blue:hover { background-color: #4b71fc; }
+.hover-b--blue:focus { border-color: #4b71fc; }
+.hover-b--blue:hover { border-color: #4b71fc; }
+.hover-blue-80:focus { color: #708fff; }
+.hover-blue-80:hover { color: #708fff; }
+.hover-bg-blue-80:focus { background-color: #708fff; }
+.hover-bg-blue-80:hover { background-color: #708fff; }
+.hover-b--blue-80:focus { border-color: #708fff; }
+.hover-b--blue-80:hover { border-color: #708fff; }
+.hover-blue-60:focus { color: #91a9ff; }
+.hover-blue-60:hover { color: #91a9ff; }
+.hover-bg-blue-60:focus { background-color: #91a9ff; }
+.hover-bg-blue-60:hover { background-color: #91a9ff; }
+.hover-b--blue-60:focus { border-color: #91a9ff; }
+.hover-b--blue-60:hover { border-color: #91a9ff; }
+.hover-blue-40:focus { color: #bdccff; }
+.hover-blue-40:hover { color: #bdccff; }
+.hover-bg-blue-40:focus { background-color: #bdccff; }
+.hover-bg-blue-40:hover { background-color: #bdccff; }
+.hover-b--blue-40:focus { border-color: #bdccff; }
+.hover-b--blue-40:hover { border-color: #bdccff; }
+.hover-blue-20:focus { color: #eaefff; }
+.hover-blue-20:hover { color: #eaefff; }
+.hover-bg-blue-20:focus { background-color: #eaefff; }
+.hover-bg-blue-20:hover { background-color: #eaefff; }
+.hover-b--blue-20:focus { border-color: #eaefff; }
+.hover-b--blue-20:hover { border-color: #eaefff; }
+.hover-navy:focus { color: #212e5f; }
+.hover-navy:hover { color: #212e5f; }
+.hover-bg-navy:focus { background-color: #212e5f; }
+.hover-bg-navy:hover { background-color: #212e5f; }
+.hover-b--navy:focus { border-color: #212e5f; }
+.hover-b--navy:hover { border-color: #212e5f; }
+.hover-navy-80:focus { color: #7b83a1; }
+.hover-navy-80:hover { color: #7b83a1; }
+.hover-bg-navy-80:focus { background-color: #7b83a1; }
+.hover-bg-navy-80:hover { background-color: #7b83a1; }
+.hover-b--navy-80:focus { border-color: #7b83a1; }
+.hover-b--navy-80:hover { border-color: #7b83a1; }
+.hover-navy-60:focus { color: #9fa6bf; }
+.hover-navy-60:hover { color: #9fa6bf; }
+.hover-bg-navy-60:focus { background-color: #9fa6bf; }
+.hover-bg-navy-60:hover { background-color: #9fa6bf; }
+.hover-b--navy-60:focus { border-color: #9fa6bf; }
+.hover-b--navy-60:hover { border-color: #9fa6bf; }
+.hover-navy-40:focus { color: #d7dbe7; }
+.hover-navy-40:hover { color: #d7dbe7; }
+.hover-bg-navy-40:focus { background-color: #d7dbe7; }
+.hover-bg-navy-40:hover { background-color: #d7dbe7; }
+.hover-b--navy-40:focus { border-color: #d7dbe7; }
+.hover-b--navy-40:hover { border-color: #d7dbe7; }
+.hover-navy-20:focus { color: #eff1f9; }
+.hover-navy-20:hover { color: #eff1f9; }
+.hover-bg-navy-20:focus { background-color: #eff1f9; }
+.hover-bg-navy-20:hover { background-color: #eff1f9; }
+.hover-b--navy-20:focus { border-color: #eff1f9; }
+.hover-b--navy-20:hover { border-color: #eff1f9; }
+.hover-green:focus { color: #39b54a; }
+.hover-green:hover { color: #39b54a; }
+.hover-bg-green:focus { background-color: #39b54a; }
+.hover-bg-green:hover { background-color: #39b54a; }
+.hover-b--green:focus { border-color: #39b54a; }
+.hover-b--green:hover { border-color: #39b54a; }
+.hover-green-light:focus { color: #e6ffea; }
+.hover-green-light:hover { color: #e6ffea; }
+.hover-bg-green-light:focus { background-color: #e6ffea; }
+.hover-bg-green-light:hover { background-color: #e6ffea; }
+.hover-b--green-light:focus { border-color: #e6ffea; }
+.hover-b--green-light:hover { border-color: #e6ffea; }
+.hover-yellow:focus { color: #ffa721; }
+.hover-yellow:hover { color: #ffa721; }
+.hover-bg-yellow:focus { background-color: #ffa721; }
+.hover-bg-yellow:hover { background-color: #ffa721; }
+.hover-b--yellow:focus { border-color: #ffa721; }
+.hover-b--yellow:hover { border-color: #ffa721; }
+.hover-yellow-light:focus { color: #fff7e4; }
+.hover-yellow-light:hover { color: #fff7e4; }
+.hover-bg-yellow-light:focus { background-color: #fff7e4; }
+.hover-bg-yellow-light:hover { background-color: #fff7e4; }
+.hover-b--yellow-light:focus { border-color: #fff7e4; }
+.hover-b--yellow-light:hover { border-color: #fff7e4; }
+.hover-red:focus { color: #ff3d44; }
+.hover-red:hover { color: #ff3d44; }
+.hover-bg-red:focus { background-color: #ff3d44; }
+.hover-bg-red:hover { background-color: #ff3d44; }
+.hover-b--red:focus { border-color: #ff3d44; }
+.hover-b--red:hover { border-color: #ff3d44; }
+.hover-red-light:focus { color: #ffe8e8; }
+.hover-red-light:hover { color: #ffe8e8; }
+.hover-bg-red-light:focus { background-color: #ffe8e8; }
+.hover-bg-red-light:hover { background-color: #ffe8e8; }
+.hover-b--red-light:focus { border-color: #ffe8e8; }
+.hover-b--red-light:hover { border-color: #ffe8e8; }
+.hover-black:focus { color: #000; }
+.hover-black:hover { color: #000; }
+.hover-bg-black:focus { background-color: #000; }
+.hover-bg-black:hover { background-color: #000; }
+.hover-b--black:focus { border-color: #000; }
+.hover-b--black:hover { border-color: #000; }
+.hover-white:focus { color: #fff; }
+.hover-white:hover { color: #fff; }
+.hover-bg-white:focus { background-color: #fff; }
+.hover-bg-white:hover { background-color: #fff; }
+.hover-b--white:focus { border-color: #fff; }
+.hover-b--white:hover { border-color: #fff; }
+.hover-black-20:focus { color: rgba( 0, 0, 0, .20 ); }
+.hover-black-20:hover { color: rgba( 0, 0, 0, .20 ); }
+.hover-bg-black-20:focus { background-color: rgba( 0, 0, 0, .20 ); }
+.hover-bg-black-20:hover { background-color: rgba( 0, 0, 0, .20 ); }
+.hover-b--black-20:focus { border-color: rgba( 0, 0, 0, .20 ); }
+.hover-b--black-20:hover { border-color: rgba( 0, 0, 0, .20 ); }
+.hover-black-40:focus { color: rgba( 0, 0, 0, .40 ); }
+.hover-black-40:hover { color: rgba( 0, 0, 0, .40 ); }
+.hover-bg-black-40:focus { background-color: rgba( 0, 0, 0, .40 ); }
+.hover-bg-black-40:hover { background-color: rgba( 0, 0, 0, .40 ); }
+.hover-b--black-40:focus { border-color: rgba( 0, 0, 0, .40 ); }
+.hover-b--black-40:hover { border-color: rgba( 0, 0, 0, .40 ); }
+.hover-black-60:focus { color: rgba( 0, 0, 0, .60 ); }
+.hover-black-60:hover { color: rgba( 0, 0, 0, .60 ); }
+.hover-bg-black-60:focus { background-color: rgba( 0, 0, 0, .60 ); }
+.hover-bg-black-60:hover { background-color: rgba( 0, 0, 0, .60 ); }
+.hover-b--black-60:focus { border-color: rgba( 0, 0, 0, .60 ); }
+.hover-b--black-60:hover { border-color: rgba( 0, 0, 0, .60 ); }
+.hover-black-80:focus { color: rgba( 0, 0, 0, .80 ); }
+.hover-black-80:hover { color: rgba( 0, 0, 0, .80 ); }
+.hover-bg-black-80:focus { background-color: rgba( 0, 0, 0, .80 ); }
+.hover-bg-black-80:hover { background-color: rgba( 0, 0, 0, .80 ); }
+.hover-b--black-80:focus { border-color: rgba( 0, 0, 0, .80 ); }
+.hover-b--black-80:hover { border-color: rgba( 0, 0, 0, .80 ); }
+.hover-black-90:focus { color: rgba( 0, 0, 0, .90 ); }
+.hover-black-90:hover { color: rgba( 0, 0, 0, .90 ); }
+.hover-bg-black-90:focus { background-color: rgba( 0, 0, 0, .90 ); }
+.hover-bg-black-90:hover { background-color: rgba( 0, 0, 0, .90 ); }
+.hover-b--black-90:focus { border-color: rgba( 0, 0, 0, .90 ); }
+.hover-b--black-90:hover { border-color: rgba( 0, 0, 0, .90 ); }
+.hover-white-20:focus { color: rgba( 255, 255, 255, .20 ); }
+.hover-white-20:hover { color: rgba( 255, 255, 255, .20 ); }
+.hover-bg-white-20:focus { background-color: rgba( 255, 255, 255, .20 ); }
+.hover-bg-white-20:hover { background-color: rgba( 255, 255, 255, .20 ); }
+.hover-b--white-20:focus { border-color: rgba( 255, 255, 255, .20 ); }
+.hover-b--white-20:hover { border-color: rgba( 255, 255, 255, .20 ); }
+.hover-white-40:focus { color: rgba( 255, 255, 255, .40 ); }
+.hover-white-40:hover { color: rgba( 255, 255, 255, .40 ); }
+.hover-bg-white-40:focus { background-color: rgba( 255, 255, 255, .40 ); }
+.hover-bg-white-40:hover { background-color: rgba( 255, 255, 255, .40 ); }
+.hover-b--white-40:focus { border-color: rgba( 255, 255, 255, .40 ); }
+.hover-b--white-40:hover { border-color: rgba( 255, 255, 255, .40 ); }
+.hover-white-60:focus { color: rgba( 255, 255, 255, .60 ); }
+.hover-white-60:hover { color: rgba( 255, 255, 255, .60 ); }
+.hover-bg-white-60:focus { background-color: rgba( 255, 255, 255, .60 ); }
+.hover-bg-white-60:hover { background-color: rgba( 255, 255, 255, .60 ); }
+.hover-b--white-60:focus { border-color: rgba( 255, 255, 255, .60 ); }
+.hover-b--white-60:hover { border-color: rgba( 255, 255, 255, .60 ); }
+.hover-white-80:focus { color: rgba( 255, 255, 255, .80 ); }
+.hover-white-80:hover { color: rgba( 255, 255, 255, .80 ); }
+.hover-bg-white-80:focus { background-color: rgba( 255, 255, 255, .80 ); }
+.hover-bg-white-80:hover { background-color: rgba( 255, 255, 255, .80 ); }
+.hover-b--white-80:focus { border-color: rgba( 255, 255, 255, .80 ); }
+.hover-b--white-80:hover { border-color: rgba( 255, 255, 255, .80 ); }
+.hover-white-90:focus { color: rgba( 255, 255, 255, .90 ); }
+.hover-white-90:hover { color: rgba( 255, 255, 255, .90 ); }
+.hover-bg-white-90:focus { background-color: rgba( 255, 255, 255, .90 ); }
+.hover-bg-white-90:hover { background-color: rgba( 255, 255, 255, .90 ); }
+.hover-b--white-90:focus { border-color: rgba( 255, 255, 255, .90 ); }
+.hover-b--white-90:hover { border-color: rgba( 255, 255, 255, .90 ); }
+.hover-transparent:focus { color: transparent; }
+.hover-transparent:hover { color: transparent; }
+.hover-bg-transparent:focus { background-color: transparent; }
+.hover-bg-transparent:hover { background-color: transparent; }
+.hover-b--transparent:focus { border-color: transparent; }
+.hover-b--transparent:hover { border-color: transparent; }
 /*
   MAX WIDTHS
   Docs: http://tachyons.io/docs/layout/max-widths/
@@ -688,35 +978,35 @@
 .g-w14 { width: 8rem; }
 .g-w15 { width: 16rem; }
 .z-6 { z-index: 6; }
-.blue { color: undefined; }
-.blue-80 { color: undefined; }
-.blue-60 { color: undefined; }
-.blue-40 { color: undefined; }
-.blue-20 { color: undefined; }
-.navy { color: undefined; }
-.navy-80 { color: undefined; }
-.navy-60 { color: undefined; }
-.navy-40 { color: undefined; }
-.navy-20 { color: undefined; }
-.green { color: undefined; }
-.green-light { color: undefined; }
-.yellow { color: undefined; }
-.yellow-light { color: undefined; }
-.red { color: undefined; }
-.red-light { color: undefined; }
-.black { color: undefined; }
-.white { color: undefined; }
-.black-20 { color: undefined; }
-.black-40 { color: undefined; }
-.black-60 { color: undefined; }
-.black-80 { color: undefined; }
-.black-90 { color: undefined; }
-.white-20 { color: undefined; }
-.white-40 { color: undefined; }
-.white-60 { color: undefined; }
-.white-80 { color: undefined; }
-.white-90 { color: undefined; }
-.transparent { color: undefined; }
+.blue { color: #4b71fc; }
+.blue-80 { color: #708fff; }
+.blue-60 { color: #91a9ff; }
+.blue-40 { color: #bdccff; }
+.blue-20 { color: #eaefff; }
+.navy { color: #212e5f; }
+.navy-80 { color: #7b83a1; }
+.navy-60 { color: #9fa6bf; }
+.navy-40 { color: #d7dbe7; }
+.navy-20 { color: #eff1f9; }
+.green { color: #39b54a; }
+.green-light { color: #e6ffea; }
+.yellow { color: #ffa721; }
+.yellow-light { color: #fff7e4; }
+.red { color: #ff3d44; }
+.red-light { color: #ffe8e8; }
+.black { color: #000; }
+.white { color: #fff; }
+.black-20 { color: rgba( 0, 0, 0, .20 ); }
+.black-40 { color: rgba( 0, 0, 0, .40 ); }
+.black-60 { color: rgba( 0, 0, 0, .60 ); }
+.black-80 { color: rgba( 0, 0, 0, .80 ); }
+.black-90 { color: rgba( 0, 0, 0, .90 ); }
+.white-20 { color: rgba( 255, 255, 255, .20 ); }
+.white-40 { color: rgba( 255, 255, 255, .40 ); }
+.white-60 { color: rgba( 255, 255, 255, .60 ); }
+.white-80 { color: rgba( 255, 255, 255, .80 ); }
+.white-90 { color: rgba( 255, 255, 255, .90 ); }
+.transparent { color: transparent; }
 @media screen and (min-width: 36em) and (max-width: 48em) {
  .shadow-1-xs { box-shadow: 0 0 5px 0 rgba( 31, 46, 95, .08 ); }
  .shadow-2-xs { box-shadow: 0 0 10px 2px rgba( 31, 46, 95, .08 ); }
